<resources>
    <string name="app_name">Breaking Bad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_characters_menu_title">Filter by season</string>
    <string name="number_of_season_hint">Enter number of season</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_apply">Apply</string>
    <string name="text_status">Status:</string>
    <string name="text_occupation">Occupation</string>
    <string name="text_season_appearance">Season appearance</string>
</resources>
