<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_characters_menu_title"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_number_of_season"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:inputType="number"
        android:hint="@string/number_of_season_hint"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/text_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_apply"
        android:textSize="18sp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/dialog_button_color"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_number_of_season" />

    <TextView
        android:id="@+id/text_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cancel"
        android:textSize="18sp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/dialog_button_color"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toTopOf="@+id/text_apply"
        app:layout_constraintEnd_toStartOf="@+id/text_apply" />




</androidx.constraintlayout.widget.ConstraintLayout>